--- a/app/views/site/ad_detail/_show.html.erb
+++ b/app/views/site/ad_detail/_show.html.erb
@@ -15,7 +15,7 @@
     <div class="well well-sm">
       <div class="ratings">
         <p class="pull-right"> <%= @ad.comments.count %> <%= t('labels.comments')%> </p>
-        <%= rating_for @ad, 'quality' %>
+        <%= rating_for @ad, 'quality', star_path: '/images/ratyrate' %>
         <%= number_with_precision(@ad.avg_rating_dimension(@ad), precision: 1) %>
       </div>
 </div>
