adicionado servicos layout backoffice

--- a/app/views/layouts/backoffice_shared/_navigation.html.erb
+++ b/app/views/layouts/backoffice_shared/_navigation.html.erb
@@ -61,6 +61,12 @@
                     Gráficos
                 <% end%>
             </li>
+            <li>
+                <%= link_to backoffice_ads_path do %>
+                    <i class="fa fa-bars fa-fw"></i> 
+                    Serviços
+                <% end%>
+            </li>
 
         </ul>
     </div>
