--- a/app/views/site/profile/ads/index.html.erb
+++ b/app/views/site/profile/ads/index.html.erb
@@ -9,6 +9,7 @@
                     <th>Categoria</th>
                     <th>Preço</th>
                     <th>Data Finalização</th>
+                    <th>Classificação</th>
                     <th>Opções</th>
                     
                 </tr>
@@ -21,6 +22,10 @@
                     <td><%= ad.category.description%></td>
                     <td><%= humanized_money_with_symbol ad.price%></td>
                     <td><%= l(ad.finish_date)%></td>
+                    <td>
+                        <center><%= number_with_precision(ad.avg_rating_dimension(ad), precision: 1) %> 
+                        </center>
+                    </td>
                     <td>
                		<%= link_to edit_site_profile_ad_path(ad.id),class: "btn btn-primary btn-sm" do %>
 						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
